# Note-Chat

./: .env  .gitignore  README.md  WORKFLOW.md  api.py  app.py  main.py  pyproject.toml  requirements.txt  setup.py  template.py
DocChat/: README_DOCCHAT.md  index.html  package-lock.json
DocChat/src/components/: CenterUpload.tsx  ChatArea.tsx  Header.tsx  LandingPage.tsx  Sidebar.tsx
NoteChat/: package.json
NoteChat/src/: App.tsx
NoteChat/src/components/: CenterUpload.tsx  ChatArea.tsx  LandingPage.tsx  Sidebar.tsx
NoteChat/src/config/: api.ts
information_retreival_system.egg-info/: PKG-INFO  SOURCES.txt
research/: trails.ipynb
src/: helper.py
